created front end view

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Dinner Review</h1>
+    <h1>Dine & Review</h1>
 
     <p>
         Welcome this site offers foodies and entertainment seekers a forum to review hundreds of dinning and entertainement locals. Search for your next dinning experience and write your review for the next visitor.
